Refactor: remove CustomerId entity, make customer_number optional field on Supplier
