# src/main/java/de/hs_esslingen/besy/controllers/OrderController.java
@@ -60,7 +60,6 @@ public class OrderController {
             @RequestParam(name = "deliveryPersonIds", required = false) List<Long> deliveryPersonIds,
             @RequestParam(name = "invoicePersonIds", required = false) List<Long> invoicePersonIds,
             @RequestParam(name = "queriesPersonIds", required = false) List<Long> queriesPersonIds,
-            @RequestParam(name = "customerIds", required = false) List<String> customerIds,
             @RequestParam(name = "supplierIds", required = false) List<Integer> supplierIds,
             @RequestParam(name = "secondaryCostCenters", required = false) List<String> secondaryCostCenterIds,
             @RequestParam(name = "lastUpdatedTimeAfter", required = false) OffsetDateTime lastUpdatedTimeAfter,
@@ -81,7 +80,6 @@ public class OrderController {
                 deliveryPersonIds,
                 invoicePersonIds,
                 queriesPersonIds,
-                customerIds,
                 supplierIds,
                 secondaryCostCenterIds,
                 lastUpdatedTimeAfter,
