# src/main/java/de/hs_esslingen/besy/controllers/SupplierController.java
@@ -1,14 +1,11 @@
 package de.hs_esslingen.besy.controllers;
 
-import de.hs_esslingen.besy.dtos.request.CustomerIdRequestDTO;
 import de.hs_esslingen.besy.dtos.request.SupplierRequestDTO;
 import de.hs_esslingen.besy.dtos.response.AddressResponseDTO;
 import de.hs_esslingen.besy.dtos.response.CreateSupplierResponseDTO;
-import de.hs_esslingen.besy.dtos.response.CustomerIdResponseDTO;
 import de.hs_esslingen.besy.dtos.response.SupplierResponseDTO;
 import de.hs_esslingen.besy.exceptions.NotFoundException;
 import de.hs_esslingen.besy.services.AddressService;
-import de.hs_esslingen.besy.services.CustomerIdService;
 import de.hs_esslingen.besy.services.SupplierService;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -22,7 +19,6 @@ import java.util.List;
 public class SupplierController {
 
     private final SupplierService supplierService;
-    private final CustomerIdService customerIdService;
     private final AddressService addressService;
 
     @GetMapping
@@ -46,17 +42,6 @@ public class SupplierController {
             @RequestBody SupplierRequestDTO supplierRequestDTO) {
         if(!supplierService.existsSupplierById(id)) throw new NotFoundException("Lieferant nicht gefunden.");
         return supplierService.updateSupplier(id, supplierRequestDTO);
-    }
-
-    @GetMapping("/{supplier-id}/customer_ids")
-    public ResponseEntity<List<CustomerIdResponseDTO>> getAllCustomerIds(@PathVariable("supplier-id") Integer id) {
-        if(!supplierService.existsSupplierById(id)) throw new NotFoundException("Lieferant nicht gefunden.");
-        return customerIdService.getAllCustomerIds(id);
-    }
-
-    @PostMapping("/{supplier-id}/customer_ids")
-    public ResponseEntity<CustomerIdResponseDTO> createCustomerId(@PathVariable("supplier-id") Integer id, @RequestBody CustomerIdRequestDTO dto) {
-        return customerIdService.createCustomerId(id, dto);
     }
 
     @GetMapping("/addresses")
