# src/main/java/de/hs_esslingen/besy/dtos/response/SupplierResponseDTO.java
@@ -18,6 +18,7 @@ public class SupplierResponseDTO implements Serializable {
     String comment;
     String website;
     String vatId;
+    String customerNumber;
     Boolean flagPreferred;
     LocalDate deactivatedDate;
 }
