# src/main/java/de/hs_esslingen/besy/mappers/response/CustomerIdResponseMapper.java
@@ -1,12 +1,0 @@
-package de.hs_esslingen.besy.mappers.response;
-
-import de.hs_esslingen.besy.dtos.response.CustomerIdResponseDTO;
-import de.hs_esslingen.besy.mappers.EntityMapper;
-import de.hs_esslingen.besy.models.CustomerId;
-import org.mapstruct.Mapper;
-import org.mapstruct.MappingConstants;
-import org.mapstruct.ReportingPolicy;
-
-@Mapper(unmappedTargetPolicy = ReportingPolicy.IGNORE, componentModel = MappingConstants.ComponentModel.SPRING)
-public interface CustomerIdResponseMapper extends EntityMapper<CustomerIdResponseDTO, CustomerId> {
-}
