# src/main/java/de/hs_esslingen/besy/models/Order.java
@@ -111,20 +111,12 @@ public class Order {
     @JoinColumn(name = "queries_person_id", nullable = true)
     private Person queriesPerson;
 
-    @Column(name = "customer_id", insertable = false, updatable = false)
-    private String customerId;
-
     @Column(name = "supplier_id", insertable = false, updatable = false)
     private Integer supplierId;
 
     @ManyToOne(fetch = FetchType.LAZY, optional = true)
-    @JoinColumns({
-            @JoinColumn(name = "customer_id", referencedColumnName = "customer_id", nullable = true),
-            @JoinColumn(name = "supplier_id", referencedColumnName = "supplier_id", nullable = true
-
-            )
-    })
-    private CustomerId customer;
+    @JoinColumn(name = "supplier_id", referencedColumnName = "id", nullable = true)
+    private Supplier supplier;
 
     @Column(name = "secondary_cost_center_id", insertable = false, updatable = false)
     private String secondaryCostCenterId;
